container height fix, fixed overflow, header margin/padding

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -38,6 +38,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @media only screen and (max-height: 670px) {
+    height: initial;
+  }
 }
 ul {
   list-style: none;
