--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,9 +5,24 @@ body {
 }
 .heading-primary {
   color: $color-dark-blue;
-  font-size: 2.8rem;
+  font-size: 2.9rem;
 }
 .heading-secondary {
   font-size: 1.5rem;
   font-weight: 600;
+
+  &--no-wrap {
+    @include respond(phone) {
+      display: none;
+    }
+  }
+
+  &--wrap {
+    display: none;
+    @include respond(phone) {
+      display: initial;
+      line-height: 2.8rem;
+      font-size: 1.7rem;
+    }
+  }
 }
