--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,7 +3,15 @@ header {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 2.9rem;
   height: 20rem;
   background: url(../../images/pattern-circles.svg) no-repeat center;
+  background-size: contain;
+  margin-top: 3rem;
+
+  @include respond(phone) {
+    padding-bottom: 2rem;
+    padding-top: 3rem;
+    margin-bottom: 2rem;
+  }
 }
